--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <script src="main.js" defer></script>
 </head>
 <body>
+    <header class="header">
+        <h1 class="title">Tic-Tac-Toe</h1>
+    </header>
+    <div class="container">
+        <div class="message" id="message">Player X's turn!</div>
+        <div class="gameBoard">
+            <div class="board" data-index="0"></div>
+            <div class="board" data-index="1"></div>
+            <div class="board" data-index="2"></div>
+            <div class="board" data-index="3"></div>
+            <div class="board" data-index="4"></div>
+            <div class="board" data-index="5"></div>
+            <div class="board" data-index="6"></div>
+            <div class="board" data-index="7"></div>
+            <div class="board" data-index="8"></div>
+        </div>
+        <div class="center">
+            <button class="restart-button" id="restart-button">Restart Game</button>
+        </div>"
+    </div>
     
 </body>
 </html>
